Change js:dependencies to not use browserify

--- a/app/templates/layout.jade
+++ b/app/templates/layout.jade
@@ -13,4 +13,4 @@ html(lang="en")
     title Ironhack - js exercises
   body
     block content
-    script(src='javascripts/app.js')
+    script(src='javascripts/main.js')
